fixed changed Dropdown buttons to DropDownToggle to allow more customizations; fixed column spacing; fixed tolerance window spacings; fixed ElpsedDataChecking so text updates on whether or not a file is uploaded, no elapsed dates detacted, and set up for if there are elspaed dates is being designed;

--- a/src/App.css
+++ b/src/App.css
@@ -80,5 +80,23 @@
 
 .custom-dropdown .dropdown-item:hover {
   background-color: rgba(255, 255, 255, 0.674);
-  /* Darker blue on hover */
+}
+
+.custom-dropdown-toggle {
+  background-color: #fefefe;
+  width: "100%" !important;
+  color: rgba(36, 61, 107, 255) !important;
+  border: 1px solid rgba(36, 61, 107, 255) !important;
+  text-align: left !important;
+}
+
+.custom-dropdown-toggle::after {
+  position: absolute;
+  right: 10px;
+  left: auto;
+  margin-top: 10px;
+}
+
+.custom-dropdown-toggle::hover {
+    background-color: rgba(255, 255, 255, 0.674);
 }
